# lso1-proj

./: .gitignore
client/app/src/main/java/com/unilucam/lsodrinkclient/DAOFactory/: DAOFactory.java
client/app/src/main/java/com/unilucam/lsodrinkclient/DAOHTTP/: DAOHTTPImage.java  DAOHTTPProduct.java  DAOHTTPUser.java  DAOHTTPUtils.java
client/app/src/main/java/com/unilucam/lsodrinkclient/DAOs/: DAOImage.java  DAOProduct.java  DAOUser.java
client/app/src/main/java/com/unilucam/lsodrinkclient/DTO/: DTOPid.java  DTOProductPurchase.java  DTOPurchase.java  DTOUser.java
client/app/src/main/java/com/unilucam/lsodrinkclient/application/: LSODrinkClientApplication.java
client/app/src/main/java/com/unilucam/lsodrinkclient/async/: GetDrinkRunner.java  Result.java
client/app/src/main/java/com/unilucam/lsodrinkclient/configs/: ConnectionConfig.java  ImageConfig.java
client/app/src/main/java/com/unilucam/lsodrinkclient/controllers/: ControllerAuth.java  ControllerHome.java  ControllerStartup.java  ControllerUtils.java
client/app/src/main/res/drawable/: btn_white_bord.xml
client/app/src/main/res/layout/: cart_item_layout.xml  item_product.xml  layout_auth.xml  layout_home.xml
client/app/src/main/res/menu/: menu_entries.xml  menu_entries_actionbar.xml
client/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
client/app/src/main/res/values-night/: themes.xml
db/: initpostgre.bsh  main.pgsql
db/mockpopulate/: mockpopulate.pgsql
server/: CMakeLists.txt  Makefile  bstnode.c  errorhandling.c  httphelper.c  log.c  main.c  mlog.c  routing.c  serverinfo.c  strutil.c  threadroutines.c
server/include/: .sighandling.h.swp  bstnode.h  config.h  dbconn.h  errorhandling.h  httphelper.h  linkedlist.h  log.h  mimage.h  mlog.h  routing.h  serverinfo.h  strutil.h  threadroutines.h
server/src/: bstnode.c  config.c  dbconn.c  errorhandling.c  httphelper.c  linkedlistnode.c  main.c  mimage.c  mlog.c  serverinfo.c  strutil.c  threadroutines.c
(+14 files in other folders)
